--- a/_posts/2017-05-06-cgi.markdown
+++ b/_posts/2017-05-06-cgi.markdown
@@ -23,7 +23,8 @@ $ sudo apachectl restart # for macOS
 ### Create CGI demo(s)
 
 Perl (demo.pl)
-```
+
+```perl
 #!/usr/bin/env perl -w
 
 print "Content-type:text/html\n\n";
@@ -34,7 +35,8 @@ print "<h1>$now</h1>";
 ```
 
 Python (demo.py)
-```
+
+```python
 #!/usr/bin/env python
 
 import time
@@ -47,7 +49,8 @@ print "<h1>%s</h1>" % now
 ```
 
 Ruby (demo.rb)
-```
+
+```ruby
 #!/usr/bin/env ruby
 
 puts "Content-type:text/html\n\n"
